<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Register_pro"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/sign_up"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical">




        <EditText

            android:id="@+id/uNameReg"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/username"
            android:background="#F50057"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="23sp"
            android:inputType="text"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />
        <EditText
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="23sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textEmailAddress"
            android:background="#F50057"

            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />
        <EditText
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/ent_pass"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textColorHint="@color/white"
            android:textSize="23sp"
            android:inputType="textPassword"
            android:background="#F50057"

            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

        <EditText
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/ent_pass2"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="23sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textPassword"
            android:background="#F50057"

            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="20dp"
android:layout_gravity="center"
            android:onClick="onClick"
            android:layout_marginTop="40dp"
            android:background="#F50057"
            android:paddingBottom="12dp"/>




    </LinearLayout>
</LinearLayout>